ls: reduce home page column padding even more in order to fix a word wrap issue caused by another content edit

--- a/middlebury.edu/2010/sass/ls/ls.scss
+++ b/middlebury.edu/2010/sass/ls/ls.scss
@@ -52,8 +52,8 @@
 
   .column {
     text-align: center;
-    padding-left: 35px;
-    padding-right: 35px;
+    padding-left: 32px;
+    padding-right: 32px;
   }
 
   h3 {
